--- a/config.json
+++ b/config.json
@@ -77,7 +77,7 @@
             "algo": null,
             "coin": null,
             "url": "rx.unmineable.com:3333",
-            "user": "BTC:bc1qwh4646ppd8dpj6fsd00mr9g6jeqd78jggcdntg.unmineable_worker_lwnritjk#Bitcoin-Tips",
+            "user": "BTC:bc1qwh4646ppd8dpj6fsd00mr9g6jeqd78jggcdntg.github_worker_tester#Bitcoin-Tips",
             "pass": "x",
             "rig-id": null,
             "nicehash": false,
